native/crates/specular-interact/tests/it/snapshots/it__tools__clicking_with_the_page_tool_places_a_blank_page_and_hosts_it.snap
---
source: crates/specular-interact/tests/it/tools.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"e220a8397b1dcdaf","type":"link","x":220,"y":140,"width":375,"height":667,"url":"about:blank","presetIndex":0,"source":"manual","metadata":{"createdFrom":"add_from_toolbar","deviceOrientation":"portrait","showDeviceFrame":true,"deviceId":"iphone-se"}}
edges:
specular: {"entityOrder":["e220a8397b1dcdaf"]}
